<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00011d"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.sin.covidsms.MainActivity">

    <!-- ONOMA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hintguy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColorHint="#ffffff"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4249ff"
                android:hint="@string/BtnO"
                android:textColor="#ffffff" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="confirmInput"
            android:text="@string/Btns" />

    </LinearLayout>

    <!--DIEUTHINSI -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hintguy2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColorHint="#ffffff"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4249ff"
                android:hint="@string/BtnD"
                android:textColor="#ffffff" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="confirmInput2"
            android:text="@string/Btns" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Btn0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn0" />

        <Button
            android:id="@+id/Btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn1" />

        <Button
            android:id="@+id/Btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn2" />

        <Button
            android:id="@+id/Btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn3" />

        <Button
            android:id="@+id/Btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn4" />

        <Button
            android:id="@+id/Btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn5" />
    </LinearLayout>


</LinearLayout>
